--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -14,6 +14,7 @@
 #header1-1 H1 {
   font-family: 'Open Sans', sans-serif;
   color: #ffffff;
+  font-size: 50px;
 }
 #footer1-4 P {
   text-align: center;
