--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
+
 #menu-0 .navbar-toggler {
   color: #000;
 }
@@ -8,13 +9,9 @@
 #menu-0 .nav-link {
   font-size: 20px;
 }
-#header1-1 {
-  
-}
-#header1-1 H1 {
-  font-family: 'Open Sans', sans-serif;
+#header1-i H1 {
   color: #ffffff;
-  font-size: 50px;
+  font-family: 'Open Sans', sans-serif;
 }
 #footer1-4 P {
   text-align: center;
