create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2,6 +2,9 @@
 #menu-0 .navbar-toggler {
   color: #000;
 }
+#menu-0 .navbar-toggler {
+  color: #000;
+}
 #menu-0 .navbar-brand {
   font-size: 25px;
 }
@@ -14,7 +17,7 @@
 #header1-i H1 {
   color: #ffffff;
   font-family: 'Open Sans', sans-serif;
-  font-size: 500%;
+  font-size: 250%;
 }
 #msg-box3-n .mbr-header .mbr-header__text {
   text-align: center;
